Prevent tooltips from extending view and being jumpy

--- a/site/src/App.css
+++ b/site/src/App.css
@@ -65,6 +65,7 @@ a:hover {
 .tooltip-tag {
   position: relative;
   display: inline-block;
+  overflow: hidden;
 }
 
 .tooltip-tag-notice::after {
